--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "@react-navigation/stack": "^7.4.5",
     "react": "19.1.0",
     "react-native": "0.80.2",
-    "react-native-safe-area-context": "^5.6.0"
+    "react-native-safe-area-context": "^5.6.0",
+    "react-native-screens": "^4.13.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
